--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <body>
   <header>
     <h1>Project Website</h1>
-    <p>Welcome to our project website!</p>
+    <p>Hey We Have Completed CI-CD Project Using Jenkins!</p>
   </header>
 
   <div class="container">
